apps/workload/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workload
  labels:
    app: workload
    app.kubernetes.io/name: workload
    app.kubernetes.io/part-of: logistics-platform
spec:
  to:
    kind: Service
    name: workload
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
